syntax = "proto3";

package com.grpc.service;

option java_multiple_files = true;
option java_package = "com.grpc.service";

message Output{
  int32 value = 1;
}

message RequestSize{
  int32 size = 1;
}

service FlowControlService{
  rpc GetMessage(stream RequestSize) returns(stream Output);
}